assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Martel:wght@300;400;700;900&display=swap');
@import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css');

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    font-size: 16px;
}

a {
    color: #2b2b2b;
}

nav {
    padding: 1rem 2rem;
    text-align: right;
    min-height: 1.6rem;
    max-width: 80rem;
    margin: 0 auto;
}

nav a>img {
    max-height: 1.9rem;
}

nav a,
a.button {
    text-decoration: none;
}

nav a:not(.brand) {
    padding: .4rem .1rem;
    margin: 0 .4rem;
    position: relative;
    top: .2rem;
    font-size: 15px;
}

nav a.brand {
    float: left;
    position: relative;
    top: -.2rem;
}

.button,
nav a.button {
    padding: .5rem 1rem;
    font-weight: 800;
    background-color: #e81d43;
    color: #fff;
    border-radius: .3rem;
}

nav a:hover {
    opacity: .8;
}

.button:hover,
nav a.button:hover {
    background-color: #e43839;
}

.button:active,
nav a.button:active {
    background-color: #9e3636;
}

main>section {
    padding: 6rem 4rem;
}

section.hero {
    text-align: center;
}

section.hero img {
    display: block;
    margin: 2rem auto 0;
    max-width: 100%;
}

h1 {
    font-size: 4rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.4rem;
}

section.hero h1 {
    font-weight: 400;
    margin: 0;
    letter-spacing: -.1rem;
    line-height: 1;
}

section p {
    font-size: 20px;
    margin: 1rem 0 1.5rem;
}

section .button {
    display: inline-block;
    font-size: 20px;
    padding: .8rem 1.5rem;
    font-weight: 500;
}

section.hero h1 strong {
    display: block;
}

footer {
    text-align: center;
    padding: 6rem 4rem;
}

footer p {
    letter-spacing: .03rem;
    font-weight: 400;
    color: #666;
}


section.hero.dark {
    background-color: #313131;
    color: #fff;
}

section.hero.dark .button {
    background-color: #fff;
    color: #191919;
}

section .button:hover {
    opacity: .8;
}

section .button:active {
    opacity: .7;
}

section.downloads .image,
section.downloads .info {
    display: inline-table;
    width: 64.5%;
    vertical-align: top;
    text-align: left;
}

section.downloads .image+.info {
    width: 28%;
    max-width: 24rem;
}

section.downloads .info {
    margin: 9rem 2rem;
}

.more-links {
    margin: 1rem 0 0 0;
    font-size: 12px;
}

section small {
    color: #424242;
}

section.downloads .info h2 {
    font-size: 3rem;
    margin: 2rem 0 1rem;
}

section.downloads p {
    margin: 1rem 0;
    padding: 0;
    color: #666;
}

section.downloads .container>.info:first-child {
    text-align: right;
}

section.downloads .container>.info:first-child {
    text-align: right;
    width: 48%;
}

section.downloads {
    max-width: 81rem;
    margin: 0 auto;
}

section.downloads .image>img {
    max-width: 100%;
}

section.downloads .container>.info+.image {
    text-align: left;
    width: 46%;
}

section.heading {
    padding: 1rem 4rem;
}

.warning {
    background-color: #ffebb0;
    padding: 1rem;
}

.warning p {
    margin: 0;
}

section.heading h1 {
    margin: 2rem 0 0;
}

.container {
    margin: 0 auto;
    padding: 1rem;
}

.container.small {
    max-width: 38rem;
}

.container.medium {
    max-width: 58rem;
}

.container.large {
    max-width: 78rem;
}

section.page {
    padding: .4rem 4rem;
}

table {
    width: 100%;
    text-align: left;
    border-spacing: 0;
}

table th {
    border-bottom: 1px solid #cccccc;
}

table th,
table td {
    padding: 1rem;
}

tbody tr:nth-child(even) {
    background-color: #f9f9f9;
}

tbody tr:hover {
    background-color: #fbf2f2;
}

table td b {
    font-weight: 500;
}

.tag {
    border-radius: 10px;
    background-color: #242424;
    padding: .2rem .6rem;
    color: #FFF;
    font-size: 14px;
}

span.tag.tag-Fonts {
    background-color: #2196F3;
}

span.tag.tag-Essentials {
    background-color: #E91E63;
}

.button+.button {
    margin: 0 0 0 .4rem;
}

.button+.button {
    margin: 0 0 0 .4rem;
}

.button.purple {
    background-color: #992fdc;
}

.button.purple:hover {
    background-color: #ad64da;
}

.button.gray {
    background-color: #a7a7a7;
}

.button.gray:hover {
    background-color: #c1c1c1;
}

.button.link,
.button.link:hover {
    background-color: transparent;
    color: initial;
    text-decoration: underline;
}

::selection,
mark {
    background: #ffffd5;
    color: #535219
}

.page.post {
    line-height: 1.94em;
    font-family: 'Martel', serif;
}

.page.post img {
    max-width: calc(100% + 8rem);
    margin: 0 -4rem;
}

pre > code {
    line-height: 1.6em;
    overflow: auto;
    padding: 30px;
    background-color: #f3f3f3;
    color: #2c363a;
    display: block;
}

.language-python .k,
.language-python .ow,
.language-css .n {
    color: #0f9814;
}

.language-python .s,
.language-html .s,
.language-css .nt,
.language-css .o {
    color: #006dc3;
}

.language-python .nb,
.language-css .nb {
    color: #FF9800;
}

.language-python .k,
.language-python .ow,
.language-python .nb,
.language-html .nt,
.language-css .nl {
    font-weight: bold;
}

.language-python .bp,
.language-python .mi,
.language-css .k {
    color: #8c1540;
}

.language-python .nf,
.language-html .na {
    color: #f13355;
}

blockquote {
    border-left: 3px solid #e0e0e0;
    padding: 1rem 1.6rem;
}

blockquote p {
    margin: 0;
}

p > code {
    padding: .2em .4em;
    margin: 0;
    font-size: 85%;
    background-color: #f3f4f4;
    border-radius: 6px;
}

.no-comments {
    color: #888888;
    text-align: center;
}

.no-comments p {
    font-size: 1em;
    letter-spacing: 0.01em;
}

section.comments .no-comments {
    border-top: 1px solid #e2e2e2;
}

nav a.active {
    text-decoration: underline;
    font-weight: 500;
}

@media screen and (max-width:745px) {
    nav a.brand {
        float: none;
    }

    nav {
        text-align: center;
    }

    nav a {
        display: block;
    }

    section.hero h1 {
        font-size: 2.4rem;
    }

    section p {
        font-size: 1rem;
        line-height: 1.6rem;
    }

    main>section {
        padding: 4rem 1rem;
    }

    section.downloads .image,
    section.downloads .info,
    section.downloads .container>.info+.image {
        display: block;
        width: initial;
        text-align: center;
    }

    section.downloads .info,
    section.downloads .image+.info,
    section.downloads .container>.info:first-child {
        width: initial;
        max-width: initial;
        margin: 0 1rem 4rem;
        text-align: center;
    }

    section.heading h1 {
        font-size: 2.4rem;
    }

    .page.post img {
        max-width: calc(100% + 4rem);
        margin: 0 -2rem;
    }
}

